<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="es.randomco.randomapp.presentation.view.main.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <FrameLayout
            android:id="@+id/layout_image_container"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/image_view_user_profile"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_placeholder_person" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_image_container"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_gender" />

            <TextView
                android:id="@+id/text_view_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_title"
                android:textSize="16sp"
                tools:text="Masculino" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_text"
                android:text="@string/details_name" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_title"
                android:textSize="16sp"
                tools:text="Federico García Lorca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_text"
                android:text="@string/details_location" />

            <TextView
                android:id="@+id/text_view_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_title"
                android:textSize="16sp"
                tools:text="Calle del Castillo, 15 (Madrid) España" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_text"
                android:text="@string/details_date" />

            <TextView
                android:id="@+id/text_view_registered_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_title"
                android:textSize="16sp"
                tools:text="17/02/1992" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_text"
                android:text="@string/details_email" />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_title"
                android:textSize="16sp"
                tools:text="federicogarcialorca@yopmail.com" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>